--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,10 +3,16 @@
     <title>Clojure Group Hamburg</title>
     <link rel="stylesheet" type="text/css" href="/css/common.css" />
     <link rel="stylesheet" type="text/css" href="/css/index.css" />
+    <script type="text/javascript" src="/js/livereload/content.js"></script>
+    <script type="text/javascript" src="/js/livereload/background.js"></script>
+    <script type="text/javascript" src="/js/livereload/livereload.js"></script>
   </head>
   <body id="index">
     <section id="header">
     </section>
     <h1>Wilkommen bei der Clojure Group Hamburg</h1>
+    <script type="text/javascript">
+      livereload.run();
+    </script>
   </body>
 </html>
