--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
   <body id="index">
     <section id="header">
     </section>
-    <h1>Wilkommen bei der Clojure Group Hamburg</h1>
+    <h1>Willkommen bei der Clojure Group Hamburg</h1>
     <script type="text/javascript">
       livereload.run();
     </script>
