Daten auf der Profilseite anzeigen und with-user wrapper hinzugefügt

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -11,6 +11,10 @@
     <section id="header">
     </section>
     <h1>Profile</h1>
+
+    <div><span>Name: </span><span class="name"></span></div>
+    <div><span>Email: </span><span class="email"></span></div>
+
     <script type="text/javascript">
       livereload.run();
     </script>
