--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -12,8 +12,12 @@
     </section>
     <h1>Profile</h1>
 
-    <div><span>Name: </span><span class="name"></span></div>
-    <div><span>Email: </span><span class="email"></span></div>
+    <div class="name"><span>Name: </span><span class="value"></span></div>
+    <div class="email"><span>Email: </span><span class="value"></span></div>
+    <div class="occupation"><span>Tätigkeit: </span><span class="value"></span></div>
+    <div class="description"><span>Kommentar: </span><span class="value"></span></div>
+    <div class="github"><span>github-Account: </span><span class="value"></span></div>
+    <div class="last_active"><span>Aktiv: </span><span class="value"></span></div>
 
     <script type="text/javascript">
       livereload.run();
