--- a/war/css/index.css
+++ b/war/css/index.css
@@ -1,1 +1,93 @@
+#wholeSite {
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+}
 
+
+#logo {
+	float: right;
+}
+
+#topheader {
+	text-align: left;
+	color: #00aad3;
+	height: 60px;
+}
+
+#topheader h2 {
+	text-align: left;
+	padding-top: 0.5em;
+}
+
+body {
+	width:  100%;
+	text-align: center;
+	font: 1em/1.1 'Open Sans', Arial;
+}
+
+#navbar {
+	background-color: #79aad3;
+	padding-top: 0.1em;
+	padding-bottom: 0.1em;
+}
+
+#navbar ul {
+	list-style-type: none;
+	text-align: left;
+}
+
+#navbar li {
+	display: inline;
+}
+
+#navbar a {
+	text-decoration: none;
+	padding-right: 10 px;
+	color: #fffeff;
+}
+
+#sidebar {
+	float : right;
+	width : 350 px;
+	border-style: none;
+	text-align: center;
+	padding-left: 5px;
+	background-color: #dcffc8;
+	color: #000;
+	margin-left: 10px;
+}
+
+.clearright {
+	clear: rigth;
+}
+
+#middle {
+	text-align: left;
+	padding-left: 40 px;
+	clear: right;
+}
+
+
+
+#footer {
+	position: relative;
+	padding-top: 2 px;
+	padding-bottom: 2 px;
+	padding-left: 40 px;
+	bottom: 10px;
+	text-align: left;
+	background-color: #79aad3;
+	top: 100px;
+	color: #a9d6fd;
+}
+
+#nextmeeting_details {
+	color: #000;
+}
+
+.tc_caption {
+	text-align: left;
+	vertical-align: text-top;
+	font-weight: bold;
+}
