--- a/war/css/index.css
+++ b/war/css/index.css
@@ -63,10 +63,14 @@ body {
 }
 
 #middle {
-        display: inline-block;
 	text-align: left;
 	padding-left: 40 px;
 	clear: right;
+}
+
+#main {
+        display: inline-block;
+        width: 700px;
 }
 
 
