--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -17,7 +17,7 @@
     <div class="occupation"><span>Tätigkeit: </span><span class="value"></span></div>
     <div class="description"><span>Kommentar: </span><span class="value"></span></div>
     <div class="github"><span>github-Account: </span><span class="value"></span></div>
-    <div class="last_active"><span>Aktiv: </span><span class="value"></span></div>
+    <div class="last-active"><span>Aktiv: </span><span class="value"></span></div>
 
     <script type="text/javascript">
       livereload.run();
